--- a/best-practices/disallow-helm-tiller/.kyverno-test/resource.yaml
+++ b/best-practices/disallow-helm-tiller/.kyverno-test/resource.yaml
@@ -6,6 +6,10 @@ spec:
   containers:
   - name: helm-tiller
     image: docker.io/tiller:latest
+  initContainers:
+  - name: helm-tillerinit
+    image: docker.io/tiller:latest
+    
 ---
 apiVersion: v1
 kind: Pod
@@ -17,6 +21,11 @@ spec:
     image: busybox:1.28
   - name: helm-tiller
     image: docker.io/tiller:latest
+  initContainers:
+  - name: busyboxinit
+    image: busybox:1.28
+  - name: helm-tillerinit
+    image: docker.io/tiller:latest
 ---
 apiVersion: v1
 kind: Pod
@@ -25,6 +34,9 @@ metadata:
 spec:
   containers:
   - name: busybox
+    image: busybox
+  initContainers:
+  - name: busyboxinit
     image: busybox
 ---
 apiVersion: v1
@@ -36,6 +48,11 @@ spec:
   - name: busybox
     image: busybox
   - name: nginx
+    image: nginx
+  initContainers:
+  - name: busyboxinit
+    image: busybox
+  - name: nginxinit
     image: nginx
 ---
 apiVersion: apps/v1
@@ -59,6 +76,10 @@ spec:
       - image: busybox:1.28
         name: busybox
         command: ["sleep", "9999"]
+      initContainers:
+      - image: busybox:1.28
+        name: busyboxinit
+        command: ["sleep", "9999"]
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -80,3 +101,6 @@ spec:
       containers:
       - image: docker.io/tiller:latest
         name: helm-tiller
+      initContainers:
+      - image: docker.io/tiller:latest
+        name: helm-tillerinit
