--- a/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-fail-first.yaml
+++ b/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-fail-first.yaml
@@ -9,7 +9,7 @@ spec:
   - name: nginx
     image: nginx:1.35
   initContainers:
-  - name: busybox
+  - name: busyboxinit
     image: busybox:latest
-  - name: nginx
+  - name: nginxinit
     image: nginx:1.35
