--- a/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-success-first.yaml
+++ b/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-latest-success-first.yaml
@@ -9,7 +9,7 @@ spec:
   - name: busybox
     image: busybox:latest
   initContainers:
-  - name: nginx
+  - name: nginxinit
     image: nginx:1.35
-  - name: busybox
+  - name: busyboxinit
     image: busybox:latest
