--- a/best-practices/disallow-latest-tag/.kyverno-test/resource.yaml
+++ b/best-practices/disallow-latest-tag/.kyverno-test/resource.yaml
@@ -8,6 +8,9 @@ spec:
   containers:
   - name: nginx
     image: nginx:1.12
+  initContainers:
+  - name: nginxinit
+    image: nginx:1.12
 ---
 apiVersion: v1
 kind: Pod
@@ -18,6 +21,9 @@ metadata:
 spec:
   containers:
   - name: nginx
+    image: nginx
+  initContainers:
+  - name: nginxinit
     image: nginx
 ---
 apiVersion: v1
@@ -32,6 +38,11 @@ spec:
     image: busybox:1.28
   - name: nginx
     image: nginx
+  initContainers:
+  - name: busyboxinit
+    image: busybox:1.28
+  - name: nginxinit
+    image: nginx
 ---
 apiVersion: v1
 kind: Pod
@@ -42,6 +53,9 @@ metadata:
 spec:
   containers:
   - name: nginx
+    image: nginx:latest
+  initContainers:
+  - name: nginxinit
     image: nginx:latest
 ---
 apiVersion: v1
@@ -55,6 +69,11 @@ spec:
   - name: busybox
     image: busybox:1.28
   - name: nginx
+    image: nginx:latest
+  initContainers:
+  - name: busyboxinit
+    image: busybox:1.28
+  - name: nginxinit
     image: nginx:latest
 ---
 apiVersion: apps/v1
@@ -77,6 +96,10 @@ spec:
       - image: busybox:1.28
         name: busybox
         command: ["sleep", "9999"]
+      initContainers:
+      - image: busybox:1.28
+        name: busyboxinit
+        command: ["sleep", "9999"]
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -98,6 +121,10 @@ spec:
       - image: busybox
         name: busybox
         command: ["sleep", "9999"]
+      initContainers:
+      - image: busybox
+        name: busyboxinit
+        command: ["sleep", "9999"]
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -118,4 +145,8 @@ spec:
       containers:
       - image: busybox:latest
         name: busybox
+        command: ["sleep", "9999"]
+      initContainers:
+      - image: busybox:latest
+        name: busyboxinit
         command: ["sleep", "9999"]
