Update disallow-helm-tiller and disallow-latest-tag to include all container types in a pod (#1111)
* Update disallow-helm-tiller.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update artifacthub-pkg.yml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update disallow-latest-tag.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update artifacthub-pkg.yml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-pod-latest-fail-first.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-pod-latest-success-first.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-pod-no-tag.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update good-pod.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-deploy.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-pod-fail-first.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-pod.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update bad-pod-success-first.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update good-deploy.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update good-pod.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update disallow-latest-tag.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update disallow-helm-tiller.yaml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update artifacthub-pkg.yml

Signed-off-by: Dolis Sharma <71091713+dolisss@users.noreply.github.com>

* Update artifacthub-pkg.yml

Signed-off-by: Do

--- a/best-practices/disallow-helm-tiller/.chainsaw-test/bad-pod-success-first.yaml
+++ b/best-practices/disallow-helm-tiller/.chainsaw-test/bad-pod-success-first.yaml
@@ -8,3 +8,8 @@ spec:
     image: busybox:1.35
   - name: helm-tiller
     image: docker.io/tiller:latest
+  initContainers:
+  - name: someboxinit
+    image: busybox:1.35
+  - name: helm-tillerinit
+    image: docker.io/tiller:latest
