--- a/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-no-tag.yaml
+++ b/best-practices/disallow-latest-tag/.chainsaw-test/bad-pod-no-tag.yaml
@@ -8,6 +8,11 @@ spec:
     image: busybox
   - name: nginx
     image: nginx:1.35
+  initContainers:
+  - name: busyboxinit
+    image: busybox
+  - name: nginxinit
+    image: nginx:1.35
 ---
 apiVersion: v1
 kind: Pod
@@ -19,6 +24,11 @@ spec:
     image: nginx:1.35
   - name: busybox
     image: busybox
+  initContainers:
+  - name: nginxinit
+    image: nginx:1.35
+  - name: busyboxinit
+    image: busybox
 ---
 apiVersion: v1
 kind: Pod
@@ -29,4 +39,9 @@ spec:
   - name: busybox
     image: busybox
   - name: nginx
+    image: nginx:latest
+  initContainers:
+  - name: busyboxinit
+    image: busybox
+  - name: nginxinit
     image: nginx:latest
