disallow-host-namespaces policy is simplified
Signed-off-by: epasham <ekambaram_pasham@infosys.com>

--- a/pod-security-cel/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
+++ b/pod-security-cel/baseline/disallow-host-namespaces/disallow-host-namespaces.yaml
@@ -31,9 +31,9 @@ spec:
         cel:
           expressions:
             - expression: >-
-                (!has(object.spec.hostNetwork) || object.spec.hostNetwork == false) &&
-                (!has(object.spec.hostIPC) || object.spec.hostIPC == false) &&
-                (!has(object.spec.hostPID) || object.spec.hostPID == false)
+                ( object.spec.?hostNetwork.orValue(false) == false) &&
+                ( object.spec.?hostIPC.orValue(false) == false) &&
+                ( object.spec.?hostPID.orValue(false) == false)
               message: >-
                 Sharing the host namespaces is disallowed. The fields spec.hostNetwork,
                 spec.hostIPC, and spec.hostPID must be unset or set to `false`.
