--- a/pod-security-cel/baseline/disallow-host-ports-range/disallow-host-ports-range.yaml
+++ b/pod-security-cel/baseline/disallow-host-ports-range/disallow-host-ports-range.yaml
@@ -29,23 +29,18 @@ spec:
             - UPDATE
       validate:
         cel:
+        cel:
+          variables:
+            - name: allContainers
+              expression: >-
+               object.spec.containers + 
+               object.spec.?initContainers.orValue([]) + 
+               object.spec.?ephemeralContainers.orValue([])
           expressions:
             - expression: >- 
-                object.spec.containers.all(container, !has(container.ports) ||
-                container.ports.all(port, !has(port.hostPort) || (port.hostPort >= 5000 && port.hostPort <= 6000)))
-              message: >-
-                The only permitted hostPorts are in the range 5000-6000.
-
-            - expression: >- 
-                !has(object.spec.initContainers) ||
-                object.spec.initContainers.all(container, !has(container.ports) ||
-                container.ports.all(port, !has(port.hostPort) || (port.hostPort >= 5000 && port.hostPort <= 6000)))
-              message: >-
-                The only permitted hostPorts are in the range 5000-6000.
-
-            - expression: >- 
-                !has(object.spec.ephemeralContainers) ||
-                object.spec.ephemeralContainers.all(container, !has(container.ports) ||
-                container.ports.all(port, !has(port.hostPort) || (port.hostPort >= 5000 && port.hostPort <= 6000)))
+                variables.allContainers.all(container, 
+                container.?ports.orValue([]).all(port,
+                size(port) == 0 ||
+                !has(port.hostPort) || (port.hostPort >= 5000 && port.hostPort <= 6000) ))             
               message: >-
                 The only permitted hostPorts are in the range 5000-6000.
