--- a/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
+++ b/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Deny binding of default service accounts
     policies.kyverno.io/category: Other
-    policies.kyverno.io/subject: Pod
+    policies.kyverno.io/subject: RoleBinding, ClusterRoleBinding
     kyverno.io/kyverno-version: 1.11.0
     policies.kyverno.io/minversion: 1.10.0
     kyverno.io/kubernetes-version: "1.26"
