--- a/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
+++ b/other/deny-default-service-account-bindings/deny-default-service-account-bindings.yaml
@@ -4,7 +4,7 @@ metadata:
   name: deny-default-service-account-bindings
   annotations:
     policies.kyverno.io/title: Deny binding of default service accounts
-    policies.kyverno.io/category: Other
+    policies.kyverno.io/category: Security
     policies.kyverno.io/subject: RoleBinding, ClusterRoleBinding
     kyverno.io/kyverno-version: 1.11.0
     policies.kyverno.io/minversion: 1.10.0
