--- a/other/scale-deployment-zero/.chainsaw-test/deploy.yaml
+++ b/other/scale-deployment-zero/.chainsaw-test/deploy.yaml
@@ -15,7 +15,7 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: ghcr.io/kyverno/test-busybox:1.35
+      - image: busybox:1.35
         name: busybox
       restartPolicy: Always
 ---
@@ -39,7 +39,7 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: ghcr.io/kyverno/test-busybox:1.35
+      - image: busybox:1.35
         name: busybox
       restartPolicy: Always
 ---
@@ -60,6 +60,6 @@ spec:
         app: busybox
     spec:
       containers:
-      - image: ghcr.io/kyverno/test-busybox:1.35
+      - image: busybox:1.35
         name: busybox
         command: ["sleep","3600"]
