--- a/best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-false.yaml
+++ b/best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-false.yaml
@@ -8,3 +8,8 @@ spec:
     image: ghcr.io/kyverno/test-busybox:1.35
     securityContext:
       readOnlyRootFilesystem: false
+  initContainers:
+  - name: busybox-init
+    image: ghcr.io/kyverno/test-busybox:1.35
+    securityContext:
+      readOnlyRootFilesystem: false
