--- a/best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-nothing.yaml
+++ b/best-practices/require-ro-rootfs/.chainsaw-test/bad-pod-nothing.yaml
@@ -6,3 +6,6 @@ spec:
   containers:
   - name: busybox
     image: ghcr.io/kyverno/test-busybox:1.35
+  initContainers:
+  - name: busybox-init
+    image: ghcr.io/kyverno/test-busybox:1.35
