--- a/best-practices/require-ro-rootfs/.chainsaw-test/bad-podcontrollers.yaml
+++ b/best-practices/require-ro-rootfs/.chainsaw-test/bad-podcontrollers.yaml
@@ -19,6 +19,12 @@ spec:
         image: ghcr.io/kyverno/test-busybox:1.35
         securityContext:
           readOnlyRootFilesystem: true
+      initContainers:
+      - name: busybox-init
+        image: ghcr.io/kyverno/test-busybox:1.35
+        securityContext:
+          readOnlyRootFilesystem: true
+      
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -36,5 +42,11 @@ spec:
             image: ghcr.io/kyverno/test-busybox:1.35
           - name: busybox-again
             image: ghcr.io/kyverno/test-busybox:1.35
+            securityContext:
+              readOnlyRootFilesystem: true
+          initContainers:
+          - name: busybox-init
+            image: ghcr.io/kyverno/test-busybox:1.35
+          - name: busybox-again-init
             securityContext:
               readOnlyRootFilesystem: true
