--- a/best-practices/require-ro-rootfs/.chainsaw-test/good-podcontrollers.yaml
+++ b/best-practices/require-ro-rootfs/.chainsaw-test/good-podcontrollers.yaml
@@ -21,6 +21,15 @@ spec:
         image: ghcr.io/kyverno/test-busybox:1.35
         securityContext:
           readOnlyRootFilesystem: true
+      initContainers:
+      - name: busybox-init
+        image: ghcr.io/kyverno/test-busybox:1.35
+        securityContext:
+          readOnlyRootFilesystem: true
+      - name: busybox-again-init
+        image: ghcr.io/kyverno/test-busybox:1.35
+        securityContext:
+          readOnlyRootFilesystem: true
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -39,6 +48,15 @@ spec:
             securityContext:
               readOnlyRootFilesystem: true
           - name: busybox-again
+            image: ghcr.io/kyverno/test-busybox:1.35
+            securityContext:
+              readOnlyRootFilesystem: true
+          initContainers:
+          - name: busybox-init
+            image: ghcr.io/kyverno/test-busybox:1.35
+            securityContext:
+              readOnlyRootFilesystem: true
+          - name: busybox-again-init
             image: ghcr.io/kyverno/test-busybox:1.35
             securityContext:
               readOnlyRootFilesystem: true
