--- a/best-practices/require-ro-rootfs/.chainsaw-test/good-pods.yaml
+++ b/best-practices/require-ro-rootfs/.chainsaw-test/good-pods.yaml
@@ -8,6 +8,11 @@ spec:
     image: ghcr.io/kyverno/test-busybox:1.35
     securityContext:
       readOnlyRootFilesystem: true
+  initContainers:
+  - name: busybox-init
+    image: ghcr.io/kyverno/test-busybox:1.35
+    securityContext:
+      readOnlyRootFilesystem: true
 ---
 apiVersion: v1
 kind: Pod
@@ -20,6 +25,15 @@ spec:
     securityContext:
       readOnlyRootFilesystem: true
   - name: busybox-again
+    image: ghcr.io/kyverno/test-busybox:1.35
+    securityContext:
+      readOnlyRootFilesystem: true
+  initContainers:
+  - name: busybox-init
+    image: ghcr.io/kyverno/test-busybox:1.35
+    securityContext:
+      readOnlyRootFilesystem: true
+  - name: busybox-again-init
     image: ghcr.io/kyverno/test-busybox:1.35
     securityContext:
       readOnlyRootFilesystem: true
