--- a/best-practices/add-rolebinding/.chainsaw-test/chainsaw-step-00-apply-1.yaml
+++ b/best-practices/add-rolebinding/.chainsaw-test/chainsaw-step-00-apply-1.yaml
@@ -5,6 +5,7 @@ metadata:
     app.kubernetes.io/component: background-controller
     app.kubernetes.io/instance: kyverno
     app.kubernetes.io/part-of: kyverno
+    rbac.kyverno.io/aggregate-to-admission-controller: "true"
   name: kyverno:background-controller:addrolebinding
 rules:
 - apiGroups:
