fix: restrict-node-label-changes chainsaw test
Signed-off-by: Vishal Choudhary <vishal.choudhary@nirmata.com>

--- a/other/restrict-node-label-changes/restrict-node-label-changes.yaml
+++ b/other/restrict-node-label-changes/restrict-node-label-changes.yaml
@@ -25,6 +25,8 @@ spec:
       - resources:
           kinds:
           - Node
+          operations:
+          - UPDATE
     validate:
       message: "Modifying the `foo` label on a Node is not allowed."
       deny:
@@ -42,11 +44,10 @@ spec:
       - resources:
           kinds:
           - Node
+          operations:
+          - UPDATE
     preconditions:
       all:
-      - key: "{{ request.operation || 'BACKGROUND' }}"
-        operator: Equals
-        value: UPDATE
       - key: "{{ request.oldObject.metadata.labels.foo || '' }}"
         operator: Equals
         value: "?*"
